--- a/movenet-singlepose-lightening/index.html
+++ b/movenet-singlepose-lightening/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Tensor Flow Hub, load raw TFJS MoveNet Model</h1>
     
-    <img src="https://storage.googleapis.com/jmstore/TensorFlowJS/EdX/standing.jpg" crossorigin width='640' height="360" alt="">
+    <img id="exampleImg" src="https://storage.googleapis.com/jmstore/TensorFlowJS/EdX/standing.jpg" crossorigin width='640' height="360" alt="">
     <!-- Import TensorFlow.js library -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.11.0/dist/tf.min.js" type="text/javascript"></script>
 
